--- a/Hotel_Booking_Analysis_Capstone_Project_Animesh_Chakraborty.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project_Animesh_Chakraborty.ipynb
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "zKTfu5OUBKKa"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "id": "jPSUOYqoBOYx",
         "outputId": "556e7e80-3cf4-4bcd-b648-762df64812c2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,7 @@
       "metadata": {
         "id": "ASv4tiCjDbde"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
         "id": "rPqeI_WRB7Xb",
         "outputId": "660414c1-117f-4649-9eef-72a4c62408ec"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +183,7 @@
         "id": "IYB6Z77dDxzH",
         "outputId": "18f60c2f-0bac-4bf4-f23f-2adf36c74f7f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,7 +800,7 @@
         "id": "mUvkRbe4D-MP",
         "outputId": "79731bed-4059-4a49-c49c-30cd92b44783"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1452,7 +1452,7 @@
         "id": "HEdJCMSiEcFI",
         "outputId": "325842f9-ac59-4980-d506-e723cf3d3a55"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1516,7 +1516,7 @@
         "id": "aqsia9z_EgXG",
         "outputId": "c5f81650-eab0-4b1d-afa7-ff13502d88ef"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1930,7 +1930,7 @@
         "id": "7ZcJHntDEsBq",
         "outputId": "848e73bf-aaaa-49e6-92c2-bc4bcb91996b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1990,7 +1990,7 @@
       "metadata": {
         "id": "HAQl-S5JE1Gd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2006,7 +2006,7 @@
         "id": "Rq8xaLAWE6HZ",
         "outputId": "7e6cfb4b-198b-4aba-b2f0-886bad3b0c6e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2075,7 +2075,7 @@
         "id": "mOOwtBc2wzCy",
         "outputId": "ac6f9ddb-f007-4f49-93c7-9769b65d2682"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2109,7 +2109,7 @@
         "id": "kQ4n9N7OxTRf",
         "outputId": "397d28c6-48a7-469d-8ab0-e5b1d4ca23c6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2159,7 +2159,7 @@
         "id": "HeHhO-qRxg9f",
         "outputId": "67a2cc29-91d1-4ea0-d73c-d0919c5436a4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2195,7 +2195,7 @@
         "id": "TIPHGWKzxk1s",
         "outputId": "5bea8305-b249-4721-fbfd-f3bc4fddfc75"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2243,7 +2243,7 @@
         "id": "_JBvgglpxu4s",
         "outputId": "dc448f16-dc36-40c9-b5dc-dcd352d7fa49"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2275,7 +2275,7 @@
         "id": "OUVstV4yxzga",
         "outputId": "0c1924aa-f161-4f82-c578-b9eb2e160ac1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2324,7 +2324,7 @@
         "id": "gtOAW3vTKcbG",
         "outputId": "8471e7a2-4801-4fd8-be4b-a4b0e0497035"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2360,7 +2360,7 @@
         "id": "gDkrPuo5KiKO",
         "outputId": "4519862b-4d2f-4475-b2ce-6c434b59858a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2408,7 +2408,7 @@
         "id": "LQJK40yZKrWY",
         "outputId": "1682ef70-36d5-452f-eee2-e8237f20fb09"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2457,7 +2457,7 @@
         "id": "4toUyfOYK3Kz",
         "outputId": "946641f2-3191-422d-a04c-3a53ef256d1d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2500,7 +2500,7 @@
         "id": "ZqN6W6LrK6LH",
         "outputId": "5e42f8b3-efd0-4b39-b1ca-930784bf7d01"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2549,7 +2549,7 @@
         "id": "ufQ1T8LcLJrq",
         "outputId": "5096ad75-ae87-423f-fb08-4953f4e68e31"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2592,7 +2592,7 @@
         "id": "7zEY55qHLMmg",
         "outputId": "58f39de7-2b7f-44ef-e5b1-40283e07e757"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2650,7 +2650,7 @@
         "id": "nAJKEftqNXvg",
         "outputId": "64efb2fc-cdba-4bac-e687-51faa5712499"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2699,7 +2699,7 @@
         "id": "KMbZPz_cNirN",
         "outputId": "000389ee-a1f7-495a-c2d1-24edfb7c2c73"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2740,7 +2740,7 @@
         "id": "BXQKKmWQNmFp",
         "outputId": "b7807ef2-808a-4d85-a77e-2e6bacef4c52"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2798,7 +2798,7 @@
         "id": "_XUiBNVZawQ1",
         "outputId": "ca446ada-97e1-4845-ae79-77b32db2445c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2839,7 +2839,7 @@
         "id": "zn9_kZKLazUq",
         "outputId": "1356ca94-8e62-47da-947a-e50b5fd228ab"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2889,7 +2889,7 @@
         "id": "xvzjSFaia8hc",
         "outputId": "6b729089-1cc0-4456-c3f9-9ce5fac6844c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2924,7 +2924,7 @@
         "id": "3uaw5GuHbBmk",
         "outputId": "d3c5e67d-f090-45c2-b577-db369837b1b4"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2985,7 +2985,7 @@
         "id": "lAqC5cYNs8Jw",
         "outputId": "620d8d11-61da-46c2-be35-4abe88b94323"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3019,7 +3019,7 @@
         "id": "GHv8F-2YtOrW",
         "outputId": "6c9a0967-a053-4529-cec7-0bc73897a2fa"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3089,7 +3089,7 @@
         "id": "L5mPXjfGtpHy",
         "outputId": "d6c0f543-e031-4b97-e41d-4faea8ecc511"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3131,7 +3131,7 @@
         "id": "kQz730efts2x",
         "outputId": "b3421123-86d5-46a7-ba02-294d301db4fe"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3181,7 +3181,7 @@
         "id": "5zIzeipMeQ5S",
         "outputId": "0cef5225-2575-4e6e-962e-6499bf97ef86"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3234,6 +3234,27 @@
       ],
       "metadata": {
         "id": "bPq5xF0Be2HU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7.   **Online TA** (Travel Agency) segment gives **high amount of customers** and then Offline TA/TO, Groups, Direct etc. respectively.\n",
+        "\n",
+        "   So , from this we conclude that we can target our marketing area to be focus on these travel agencies website and work with them since majority of the visitors tend to reach out to them.\n",
+        "8.   **Maximum** of the bookings are made with **bed and breakfast** .So, BB type of meal category is the most preferable in all type of customers.\n",
+        "9.   **Majority** of the bookings are **transient**. This means that the booking is not part of a group or contract. With the ease of booking directly from the website, most people tend to skip the middleman to ensure quick response from their booking.\n",
+        "\n",
+        "10.  **A - type of room** is the **most favourite** in all types of customers covering all the market about more than 85% while negligible customers are there which are ready to stay in L - type of room.\n",
+        "\n",
+        "     So we need to upgrade L- type of room to attract more customers so that no one should be in waiting list and do not search any other hotel.\n",
+        "11.   For **resort hotels**, the Average Daily Rate **(ADR)** is **more expensive** during **August, July, June and September.**\n",
+        "For **city hotels**, the Average Daily Rate **(ADR)**  is **more expensive** during **August, July, May and June.**\n",
+        "\n",
+        "   So overall Average Daily Rate of both city hotels  and resort hotels are more expensive between May and Septemeber."
+      ],
+      "metadata": {
+        "id": "0Sa_t5a8wCbu"
       }
     }
   ]
